--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.16.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.5.1",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
